[package]
name = "taitoh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.6"
log = "0.4.25"
serde_json = "1.0.138"
serde = { version = "1.0", features = ["derive"] }
mime = "0.3.17"
h2 = "0.4.6"
http = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = false

[features]
default = ["access-log"] # デフォルトではロギングを有効化
access-log = []          # ロギング機能をオプション化
